--- a/rob-barash-website/src/styles/main.scss
+++ b/rob-barash-website/src/styles/main.scss
@@ -3,7 +3,12 @@
 MAIN STYLES
 --------------------
 * rem units vs em units; both used for font sizes, em scales down, rem is relative to the html font-size (1 rem = 100)
+
+Overriding Bootstrap / CSS Priorities
+https://css-tricks.com/specifics-on-css-specificity/
+
 */
+
 
 
 $primaryColor: darkorange;
@@ -46,7 +51,7 @@ p{
 
 .skills-section{
     position:relative;
-    margin: 15rem 0px 0px;
+    margin: 26rem 0px 0px;
     display: flex;
     background-image: linear-gradient(to bottom, $secondaryColor,$gradientBg1 8%, $gradientBg1 10%,$gradientBg1 80%, $gradientBg1 98%, $gradientBg2);
 }
@@ -82,6 +87,10 @@ p{
     color:white;
 }
 
+
+.hide-mobile{
+    display:none;
+}
 
 @keyframes move-text{
     0% { margin-right: 0em; opacity: 1; }
@@ -127,9 +136,15 @@ sunset-bottom-repeat{
     background-repeat: repeat-y;
 }
 
-hidden{
+.hidden{
     background-image:none;
 }
+
+/*
+--------------------
+I C O N  S T Y L E S 
+--------------------
+*/
 
 .fa-icon{
     font-size:130px;
@@ -137,11 +152,21 @@ hidden{
 }
 
 .img-icon{
-    height:65%;
+    //height:65%;
     width:120px;
-    padding-bottom:10px;
+    padding-bottom:30px;
+}
+.net-icon{
+    filter: invert(22%) sepia(37%) saturate(3041%) hue-rotate(249deg) brightness(88%) contrast(102%);
 }
 
+.rest-icon{
+    filter: invert(11%) sepia(66%) saturate(4473%) hue-rotate(353deg) brightness(100%) contrast(97%);
+}
+
+.sql-icon{
+    filter: invert(65%) sepia(75%) saturate(7293%) hue-rotate(67deg) brightness(98%) contrast(91%);
+}
 /*
 --------------------
 C A R D S
@@ -151,7 +176,7 @@ C A R D S
 .card-title{
     color: $tertiaryColor;
     text-align: center;
-
+    text-decoration:none;
 }
 .card-title:hover{
     text-decoration: none;
@@ -159,13 +184,9 @@ C A R D S
 .card-body{
     color: $tertiaryColor;
 }
-
 .card{
     position: absolute;
     justify-content:center;
-    margin-left: 25%;
-    width:50%;
-
 }
 /*
 --------------------
@@ -195,17 +216,18 @@ No media query since this is the default in Bootstrap because it is "mobile firs
         background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
         linear-gradient(to bottom, $secondaryColor 0%, rgba(0, 0, 0, 0.05) 5%, rgba(0, 0, 0, 0.05) 14%, rgba(0,0,0,0.05)24%, transparent 100%),
         linear-gradient(to top, $secondaryColor 0%, rgba(0, 0, 0, 0.05) 5%, rgba(0, 0, 0, 0.05) 14%, rgba(0,0,0,0.05)24%, transparent 100%),
-        url('/static/sunset-mobile.png'); 
+        url('/static/sunset-mobile-compressed.jpg'); 
     }
     .section{
         margin:10rem 0px;
     }
+
 }
 
 //IPhone 6/7/8 Plus
 @media (min-width: 319px) and (orientation:portrait) {  
     .section{
-        margin: 13rem 0px;
+        margin: 10rem 0px;
     }
 }
 /* Small devices (landscape phones, 576px and up) */
@@ -214,10 +236,13 @@ No media query since this is the default in Bootstrap because it is "mobile firs
     .sunset-image{
         background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
         linear-gradient(to bottom, black 0%, rgba(0, 0, 0, 0.05) 5%, rgba(0, 0, 0, 0.05) 14%, rgba(0,0,0,0.05)24%, transparent 100%),
-        url('/static/sunset-mobile.png'); 
+        url('/static/sunset-mobile-compressed.jpg'); 
     }
     .section{
-        margin:20rem 0px;
+        margin:13rem 0px;
+    }
+    .img-icon{
+        width:180px;
     }
 }
 
@@ -226,10 +251,19 @@ No media query since this is the default in Bootstrap because it is "mobile firs
     .sunset-image{
         background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
         linear-gradient(to bottom, black 0%, rgba(0, 0, 0, 0.05) 5%, rgba(0, 0, 0, 0.05) 14%, rgba(0,0,0,0.05)24%, transparent 100%),
-        url('/static/sunset-tablet.png'); 
+        url('/static/sunset-desktop-compressed.jpg'); 
     }
     .section{
         margin:48rem 0px;
+    }
+    .hide-mobile{
+        display:block;
+    }
+    .card{
+        position: absolute;
+        justify-content:center;
+        margin-left: 25%;
+        width:50%;
     }
 }
 
@@ -241,7 +275,7 @@ No media query since this is the default in Bootstrap because it is "mobile firs
         background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
         linear-gradient(to bottom, $secondaryColor 0%, rgba(0, 0, 0, 0.05) 5%, rgba(0, 0, 0, 0.05) 14%, rgba(0,0,0,0.05)24%, transparent 100%),
         linear-gradient(to top, $secondaryColor 1%, rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.1) 14%, rgba(0,0,0,0.05)24%, transparent 100%),
-        url('/static/sunset-desktop.png'); 
+        url('/static/sunset-desktop-compressed.jpg'); 
     }
 }
 
